--- a/index.html
+++ b/index.html
@@ -4,50 +4,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Desierto del Sahara</title>
-    <link rel="stylesheet" href="/styles.css">
+    <title>El Portazo</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital@1&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/5388f691ef.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
         <div class="navbar">
-            <img src="/logo.png" class="logo">
+            <i class="fa-solid fa-camera-movie"></i>
         <nav>
             <ul>
-                <li><a href="#">Homerun</a></li>
-                <li><a href="#">Region</a></<li>
-                <li><a href="#">About</a></li>
+                <li><a href="#">Quienes Somos</a></li>
+                <li><a href="#">Las Polacas</a><li>
+                <li><a href="#">Construyendo a Fierro</a></li>
+                <li><a href="#">Billete de 100</a></li>
+                <li><a href="#">Voyeur</a></li>
+                <li><a href="#">Contacto</a></li>
             </ul>
         </nav>
-        <img src="/menu.png" class="menu-icon">
+        <i class="fa-solid fa-bars"></i>
         </div>
         <div class="row">
             <div class="col">
-                <h1>SAHARA</h1>
-                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem aut sed nihil sit impedit ad sunt eius facere, laudantium qui consequatur temporibus. Reiciendis consectetur dolores voluptatem, ea quis repudiandae ab.</P>
-            <button type="button">Explore</button>
+                <h1>El portazo</h1>
+                <P>Es una productora audiovisual liderada por un equipo muy heterogéneo pero con un mismo objetivo: la creatividad y la cultura. </P>
+            <button type="button">Quienes somos</button>
             </div>
             <div class="col">
-                <div class="card card1">
-                    <h5>Western Desert</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita ipsa vel provident tempore, reprehenderit quae, ut aliquid dolores maxime rerum commodi, reiciendis facere alias assumenda consequatur aperiam voluptates ratione vero?</p>
+                <div class="card serie1">
+                    <h5>Las Polacas</h5><br>
+                    <p>6 capítulos, dos partes, 25 minutos de ficción y un documental de 5 minutos
+						Guión fue autoadaptado de su trilogía teatral “Las
+						Polacas” por la autora: Patricia Suárez.</p>
                 </div>
-                <div class="card card2">
-                    <h5>AI Bagawat</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita ipsa vel provident tempore, reprehenderit quae, ut aliquid dolores maxime rerum commodi, reiciendis facere alias assumenda consequatur aperiam voluptates ratione vero?</p>
+                <div class="card serie2">
+                    <h5>Construyendo a Fierro</h5><br>
+                    <p>La historia cuenta la vida del guacho Martín Fierro, con la particularidad de que el espectador irá eligiendo su propia aventura </p>
                 </div>
-                <div class="card card3">
-                    <h5>Pyramid of Giza</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita ipsa vel provident tempore, reprehenderit quae, ut aliquid dolores maxime rerum commodi, reiciendis facere alias assumenda consequatur aperiam voluptates ratione vero?</p>
+                <div class="card serie3">
+                    <h5>Billete de 100</h5><br>
+                    <p>La historia transcurre alrededor de un billete de 100 pesos, los lugares que va pasando, las distintas manos que lo tocan con sus respectivos personajes</p>
                 </div>
-                <div class="card card4">
-                    <h5>Kkalahary Desert</h5>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita ipsa vel provident tempore, reprehenderit quae, ut aliquid dolores maxime rerum commodi, reiciendis facere alias assumenda consequatur aperiam voluptates ratione vero?</p>
+                <div class="card serie4">
+                    <h5>Voyeur</h5> <br>
+                    <p>¿Qué se esconde del otro lado? Espías, mirones...</p>
                 </div>
             </div>
         </div>
     </div>
-</body>s
+</body>
 </html>
